--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is Tbag."
-header-img: "img/tbag.jpg"
+description: "Hey, this is Hux."
+header-img: "img/about-bg-walle.jpg"
 multilingual: true
 ---
 
